app/assets/stylesheets/config/_custom-css.scss
// Custom Simple Snippets

// Shadows
.ct-shadow {
  box-shadow: 0px 2px 5px rgba(30,30,30, .4);
}

.ct-shadow-navbar {
  box-shadow: 0px 4px 10px rgba(30,30,30, .2);
}

// Rounded Borders
.ct-round-5 {
  border-radius: 5px;
}

.ct-round-50 {
  border-radius: 50px;
}

// Text Colors
.ct-text-dark {
  color: $ct-dark;
}

.ct-text-dark-medium {
  color: $ct-dark-medium;
}

.ct-text-light {
  color: $ct-light;
}

// Text Sizes
.ct-text-12 {
  font-size: 12px;
}

.ct-text-14 {
  font-size: 14px;
}

.ct-text-20 {
  font-size: 20px;
}

.ct-bold {
  font-weight: 700;
}

// Background colors
.ct-bg-global {
  background-color: $ct-bg-global;
}

// Opacity
.ct-opacity-90 {
  opacity: 0.9;
}

.ct-opacity-70 {
  opacity: 0.7;
}



// Capitalize
.ct-capitalize {
  text-transform: capitalize;
}


// custom circle
.ct-circle {
  height: 30px;
  width: 30px;
  border-radius: 50px;
  padding: 2px 10px;
  font-size: 16px;
  margin-right: 5px;
}

// Margins
.ct-mb-big {
  margin-bottom: 100px;
}

.ct-mb-semi {
  margin-bottom: 80px;
}

.ct-mt-big {
  margin-top: 100px;
}


.ct-mt-big-xl {
  margin-top: 150px;
}

// CHIPS
.ct-chip {
  box-shadow: 0px 2px 5px rgba(30,30,30, .4);
  border-radius: 50px;
  background-color: $ct-light;
  padding: 0px 20px;
  height: 40px;
  margin-top: 10px;
  margin-right: 10px;
  display: inline-flex;
  align-items: center;

}

